Crawler-Commons Change Log

Current Development 0.6-SNAPSHOT
- Issue 62: [Sitemaps] Add new parseSiteMap method (jnioche)
- Issue 57:	[Sitemaps] SiteMap should contain a list of SitemapUrls instead of a table of them
- Issue 51:	Upgrade httpclient to the latest version
- Issue 61:	[Sitemaps] Sitemap Parser changes the processed flag unnecessarily (Avi Hayun)
- Issue 56: [Sitemaps] SiteMap.setBaseUrl(...) causes the domain name to be lowered case which shouldn't happen (Avi Hayun)
- Issue 50: Add Fetch Report to FetchedResult (lewismc, avraham2)
- Issue 55: [Sitemaps] SitemapUrl "setPriority(String str)" should check for proper value (Avi Hayun)

Release 0.5 - 09/10/2014 (dd/mm/yyyy)
- Issue 53:	Spaces in a comma separated list of names in a User-agent: line cause rules to be applicable to all agents (kkrugler)
- Issue 45: [Sitemaps] Upgrade code after release of Tika v1.6 (Avi Hayun)
- Issue 48: Upgraded to Tika 1.6 (jnioche)
- Issue 47: [Sitemaps] SiteMapParser Tika detection doesn't work well on some cases (Avi Hayun)
- Issue 40: [Sitemaps] Add Tika MediaType Support (Avi Hayun)
- Issue 39: [Sitemaps] Add the Parser a convenience method with only a URL argument (Avi Hayun via lewismc)
- Issue 42: [Sitemaps] Add more JUnit tests (Avi Hayun via lewismc)
- Issue 37: Upgrade the Slf4j logging Library to v1.7.7 (Avi Hayun via kkrugler)
- Issue 41: Upgrade to JUnit v4 conventions in SiteMapParser (Avi Hayun via lewismc)
- Issue 34: Upgrade the Slf4j logging in SiteMaps (Avi Hayun via lewismc)

Release 0.4
- Issue 13: Fix deprecation in Crawler Commons Code (lewismc via kkrugler)
- Issue 8 : Upgrade of httpclient to v4.2.6 (Fuad Efendi, lewismc via kkrugler)
- Issue 18: Support matching against query parameters in robots.txt rules (alparslanavci, kkrugler)
- Issue 21: Follow Google example of giving Allow directives higher match weight than Disallow directives (y.vladimirov, via kkrugler)