@@ -1,0 +1,7 @@
+Sitemap: /sitemap.xml
+
+User-agent: *
+Disallow: /cache/
+Disallow: /cp/
+Disallow: /docs/
+Disallow: /files/
